--- a/doc/lto.tex
+++ b/doc/lto.tex
@@ -157,6 +157,10 @@
   \[C(\Acal) = \sum_{i = 1}^{|M|} CM(m_i, a_i) + \sum_{i = 1}^{|M|} CT(a_{i - 1}, a_i).\]
 \end{frame}
 
+\begin{frame}{Network Flow}
+  \includegraphics[scale=0.35]{cs706projflow}
+\end{frame}
+
 \begin{frame}{LP formulation}
   \begin{tabular}{lrl}
   directed graph $G = (V, E)$ & cost &$w: E \rightarrow \ZZ$ \\
